# XBWT

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  experiments.cpp  main.cpp  random_tree_generator.py
CMakeModules/: ConfigureCompilerClang.cmake  ConfigureCompilerGcc.cmake
HashTable/: HashTable.cpp
LabeledTree/: LabeledTree.hpp
XBWT/: XBWT.cpp  XBWT.hpp
include/: CMakeLists.txt
include/HashTable/: HashTable.hpp
include/LabeledTree/: CMakeLists.txt  LabeledTree.hpp
include/XBWT/: CMakeLists.txt  XBWT.hpp
sources/: CMakeLists.txt
sources/experiments/: CMakeLists.txt  experiments.cpp
sources/test/: CMakeLists.txt  test.cpp
sources/xbwt_test/: CMakeLists.txt  xbwt_test.cpp
